[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Born2bSportyV2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/HeroChoiceMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Heroes/KnightMaleAnimatedSprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Heroes/WizardAnimatedSprite.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Heroes/LizardMaleAnimatedSprite.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.262745, 0.235294, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1230.0
margin_bottom = 670.0
custom_constants/separation = 65

[node name="TitleContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1230.0
margin_bottom = 72.0
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
margin_left = 340.0
margin_right = 889.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Choose your walker"
align = 1
valign = 1

[node name="WalkerControls" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 137.0
margin_right = 1230.0
margin_bottom = 462.0
custom_constants/separation = 65

[node name="ChoiceHeroButton" type="HBoxContainer" parent="MarginContainer/VBoxContainer/WalkerControls"]
margin_left = 402.0
margin_right = 827.0
margin_bottom = 200.0
size_flags_horizontal = 6
custom_constants/separation = 35
alignment = 1

[node name="Marker" type="Label" parent="MarginContainer/VBoxContainer/WalkerControls/ChoiceHeroButton"]
margin_top = 70.0
margin_right = 30.0
margin_bottom = 130.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 3 )
text = ">"

[node name="HeroesBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/WalkerControls/ChoiceHeroButton"]
margin_left = 65.0
margin_right = 425.0
margin_bottom = 200.0
size_flags_horizontal = 4
size_flags_vertical = 2
custom_constants/separation = 60
alignment = 1

[node name="KnightBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/WalkerControls/ChoiceHeroButton/HeroesBox"]
margin_right = 80.0
margin_bottom = 200.0
rect_min_size = Vector2( 80, 200 )

[node name="Marker" type="Label" parent="MarginContainer/VBoxContainer/WalkerControls/ChoiceHeroButton/HeroesBox/KnightBox"]
margin_right = 80.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "*"
align = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/WalkerControls/ChoiceHeroButton/HeroesBox/KnightBox"]
margin_top = 36.0
margin_right = 80.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
text = "Kinght"

[node name="AnimatedSprite" parent="MarginContainer/VBoxContainer/WalkerControls/ChoiceHeroButton/HeroesBox/KnightBox" instance=ExtResource( 3 )]
scale = Vector2( 5, 5 )
offset = Vector2( 8, 24 )

[node name="WizardBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/WalkerControls/ChoiceHeroButton/HeroesBox"]
margin_left = 140.0
margin_right = 220.0
margin_bottom = 200.0
rect_min_size = Vector2( 80, 200 )

[node name="Marker" type="Label" parent="MarginContainer/VBoxContainer/WalkerControls/ChoiceHeroButton/HeroesBox/WizardBox"]
margin_right = 80.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "*"
align = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/WalkerControls/ChoiceHeroButton/HeroesBox/WizardBox"]
margin_top = 36.0
margin_right = 80.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
text = "Wizard"

[node name="AnimatedSprite" parent="MarginContainer/VBoxContainer/WalkerControls/ChoiceHeroButton/HeroesBox/WizardBox" instance=ExtResource( 4 )]
scale = Vector2( 5, 5 )
offset = Vector2( 8, 24 )

[node name="LizardBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/WalkerControls/ChoiceHeroButton/HeroesBox"]
margin_left = 280.0
margin_right = 360.0
margin_bottom = 200.0
rect_min_size = Vector2( 80, 200 )
custom_constants/separation = 5

[node name="Marker" type="Label" parent="MarginContainer/VBoxContainer/WalkerControls/ChoiceHeroButton/HeroesBox/LizardBox"]
margin_right = 80.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "*"
align = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/WalkerControls/ChoiceHeroButton/HeroesBox/LizardBox"]
margin_top = 37.0
margin_right = 80.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 2 )
text = "Lizard"

[node name="AnimatedSprite" parent="MarginContainer/VBoxContainer/WalkerControls/ChoiceHeroButton/HeroesBox/LizardBox" instance=ExtResource( 5 )]
scale = Vector2( 5, 5 )
offset = Vector2( 8, 24 )

[node name="StartButton" type="CenterContainer" parent="MarginContainer/VBoxContainer/WalkerControls"]
margin_left = 390.0
margin_top = 265.0
margin_right = 840.0
margin_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 4

[node name="StartButton" type="HBoxContainer" parent="MarginContainer/VBoxContainer/WalkerControls/StartButton"]
margin_left = 84.0
margin_right = 366.0
margin_bottom = 60.0
custom_constants/separation = 5

[node name="Marker" type="Label" parent="MarginContainer/VBoxContainer/WalkerControls/StartButton/StartButton"]
margin_right = 30.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 3 )
text = ">"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/WalkerControls/StartButton/StartButton"]
margin_left = 35.0
margin_right = 282.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 3 )
text = "Start game"

[node name="BackButton" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 383.0
margin_top = 527.0
margin_right = 847.0
margin_bottom = 587.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="BackButton" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BackButton"]
margin_right = 464.0
margin_bottom = 60.0
custom_constants/separation = 5

[node name="Marker" type="Label" parent="MarginContainer/VBoxContainer/BackButton/BackButton"]
margin_right = 30.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 3 )
text = ">"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/BackButton/BackButton"]
margin_left = 35.0
margin_right = 464.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 3 )
text = "Back to level setup"
